--- a/index.html
+++ b/index.html
@@ -1,20 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CorretoraApp - Sistema de Gestão</title>
+    <title>Corretora App - Sistema de Gestão</title>
     <meta name="description" content="Sistema de gestão pessoal e profissional para corretores de imóveis" />
-    <meta name="author" content="Lovable" />
+    <meta name="author" content="Corretora App" />
 
-    <!-- <meta property="og:title" content="d0be223f-3cca-4221-9108-6e2af8d3c75e" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Corretora App" />
+    <meta property="og:description" content="Sistema de gestão para corretores de imóveis" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" /> -->
   </head>
 
   <body>
